syntax = "proto3";


import "google/api/field_behavior.proto";
import "google/protobuf/descriptor.proto";
import "google/api/http.proto";
import "entity-tmpl/entity-feature-options.proto";


package entity.feature.api.options;

extend google.protobuf.MessageOptions {
  string name_template = 3001;
  MethodComponentTemplateSet method_component_template_set = 3002;
  google.api.HttpRule http_rule = 3003;
  google.api.FieldBehavior key_field_behavior = 3004;
}

message MethodComponentTemplateSet {
  string name_template = 1;
  string request_dto_name_template = 2;
  string response_dto_name_template = 3;
  RequestTemplate request_template = 4;
  ResponseTemplate response_template = 5;
}

message RequestTemplate {
  oneof template {
    EntityKeyRequest entity_key_request = 1;
  }
}

message ResponseTemplate {
  oneof template {
    OneEntityResponse one_entity_response = 1;
  }
}

// Поле этого типа в шаблоне будет заменено при генерации на поле с типом сущности
message EntityDescriptor {}

// Поле этого типа в шаблоне будет заменено при генерации на поле ключа сущности
message EntityKeyDescriptor {}

message OneEntityResponse {
  message NestedTypecbcbdbd {
    message NestedNestedTypecbcvmjfjfjbd {
      EntityDescriptor daffta = 2 [(google.api.field_behavior) = REQUIRED];
    }
    repeated EntityDescriptor data = 1;
    oneof e {
      EntityDescriptor daffta = 2 [(google.api.field_behavior) = REQUIRED];
    }
  }
  // Тип ответа
  oneof type {
    // {EntityDescription}
    EntityDescriptor data = 1;
  }
  NestedTypecbcbdbd field_fhfhfg = 2;
}

message EntityKeyRequest {
  EntityDescriptor data = 1;
  // {EntityKeyDescription}
  EntityKeyDescriptor entity_key = 2;
  string error = 3;
  int32 code = 40;
}








