syntax = "proto3";

import "google/protobuf/descriptor.proto";
import "entity.feature.aml.proto";
import "entity-tmpl/entity.feature.service.proto";

package entity.feature.options;

extend google.protobuf.MessageOptions {
  // .
  ApiSpecification api_specification = 3010;
  // .
  aml.Specification aml_specification = 3011;
}

extend google.protobuf.FieldOptions {
  // .
  UniqueFieldGroup unique_field_group = 3003;
}

enum UniqueFieldGroup {
  PK = 0;
  UG1 = 1;
  UG2 = 2;
  UG3 = 3;
  UG4 = 4;
  UG5 = 5;
}

message KeyFieldsList {
  repeated string key_fields = 1;
}

message KeyFieldsDefinition {
  oneof def {
    KeyFieldsList key_field_list = 1;
    options.UniqueFieldGroup unique_field_group = 2;
  }
}

// Protobuf service generation
message ApiSpecification {
  oneof service {
    service.ServersideEntityCRUD serverside_entity_crud = 1;
    service.ServersideSingletonCRUD serverside_singleton_crud = 2;
  }
}
